# agentic-coder-teams-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/claude_teams/: __init__.py  agent_output.py  async_utils.py  capabilities.py  cli.py  errors.py  eventlog.py  filelock.py  inbox_crypto.py  messaging.py  models.py  orchestration.py  presets.py  server.py  server_bootstrap.py  server_prompts.py  server_runtime.py  server_schema.py  server_simple.py  server_team_relay.py  server_team_spawn.py  server_team_tasks.py  server_teammate.py  skill_providers.py  tasks.py  teams.py  telemetry.py  templates.py
src/claude_teams/backends/: __init__.py  _agent_discovery.py  aider.py  amp.py  auggie.py  base.py  claude_code.py  claudish.py  coder.py  codex.py  contracts.py  copilot.py  gemini.py  goose.py  happy.py  kimi.py  llxprt.py  opencode.py  process_base.py  process_manager.py  qwen.py  registry.py  rovodev.py  tmux_base.py  vibe.py
src/claude_teams/skills/team-orchestration/: SKILL.md
tests/: _server_support.py  conftest.py  test_agent_output.py  test_cli.py  test_env_defaults.py  test_messaging_inbox.py  test_messaging_send.py  test_models.py  test_presets.py  test_prompts.py  test_server_backend_ops.py  test_server_bootstrap.py  test_server_relay.py  test_server_team_messages.py  test_server_team_tasks.py  test_skill_providers.py  test_tasks_basic.py  test_tasks_dependencies.py  test_teams.py  test_telemetry.py  test_templates.py
tests/test_backends/: _base_support.py  conftest.py  test_aider.py  test_amp.py  test_auggie.py  test_base_core.py  test_base_runtime.py  test_claude_code.py  test_claudish.py  test_coder.py  test_codex.py  test_copilot.py  test_gemini.py  test_goose.py  test_happy.py  test_kimi.py  test_llxprt.py  test_opencode.py  test_qwen.py  test_registry.py  test_rovodev.py  test_vibe.py
