[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-teams"
version = "0.1.0"
description = "Multi-backend MCP server for orchestrating teams of agentic coding agents"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastmcp>=3.2.0,<4",
    "typer>=0.24.1,<1",
    "rich>=14.3.3,<15",
    "claude-code-tools>=1.11.1,<2",
    "cryptography>=46.0.6,<47",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.0.0,<8",
]

[project.scripts]
claude-teams = "claude_teams.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_teams"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
